# aiopquic

./: .gitignore  .gitmodules  CHANGELOG.md  DATAFLOW.md  PERFORMANCE.md  README.md  WAKE_PROTOCOL.md  build_picoquic.sh  pyproject.toml  setup.py  update_submodules.sh
.github/actions/setup-aiopquic/: action.yml
.github/workflows/: cicd.yml  release.yml  wheels-dry-run.yml
patches/: 0002-picoquic-sockloop-drop-system-io_uring-header.patch
src/aiopquic/: _build_info.py  versions.py
src/aiopquic/_binding/: _buffer.pyx  _streamchain.pyx  _transport.pyx  picoquic.pxd  spsc_ring.pxd
src/aiopquic/_binding/c/: callback.h  h3wt_callback.h  spsc_ring.h  stream_ctx.h
src/aiopquic/asyncio/: protocol.py  webtransport.py
src/aiopquic/quic/: configuration.py  connection.py
tests/: test_baton_pattern.py  test_flow_control_quic.py  test_flow_control_wt.py  test_loopback.py  test_negotiation.py  test_spsc_ring.py  test_transport.py  test_vi64.py  test_vint_mode.py  test_webtransport.py
tests/bench/: _helpers.py  bench_backpressure.py  bench_baselines_highlevel.py  bench_baselines_lowlevel.py  bench_concurrent_streams_highlevel.py  bench_datagram.py  bench_latency_floor.py  bench_small_object_rate.py  bench_split_writes_stress.py  bench_stream_churn_highlevel.py  bench_throughput.py  bench_throughput_bidirectional.py  bench_throughput_parallel.py  bench_throughput_pullmodel.py  bench_vint_codec.py  bench_wt_split_writes_stress.py  conftest.py  test_rx_bloat_during_load.py  test_rx_fc_counters.py
tests/bench/sim_link/: build.sh
