[build-system]
requires = ["setuptools>=75.0", "cython>=3.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiopquic"
version = "0.2.4"
description = "High-performance QUIC/HTTP3 library — picoquic-backed, qh3-compatible asyncio API"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Giovanni Marzot", email = "gmarzot@marzresearch.net" }
]
dependencies = [
    "certifi",
]

[project.urls]
Homepage = "https://github.com/gmarzot/aiopquic"
Repository = "https://github.com/gmarzot/aiopquic.git"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-xdist",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Benches are opt-in: run them with `pytest tests/bench`.
addopts = "--ignore=tests/bench"
python_files = ["test_*.py", "bench_*.py"]
markers = [
    "interop: tests against public QUIC/H3 endpoints (needs network)",
    "native: native picoquic_ct/picohttp_ct subprocess smoke (needs build_picoquic_tests.sh)",
    "bench: microbenchmarks (in tests/bench/, opt-in via path)",
]

# ---------------------------------------------------------------------------
# Wheel build matrix (cibuildwheel)
# ---------------------------------------------------------------------------
# Targets: Linux x86_64 (manylinux_2_28), macOS x86_64 (10.15+), macOS arm64.
# Python: cp314 only — aiopquic requires Python 3.14+.
#
# Each wheel build first compiles picoquic+picotls from the vendored
# submodules via build_picoquic.sh inside the cibuildwheel container.
# auditwheel/delocate handle bundling libssl/libcrypto into the wheel so
# end users don't need OpenSSL preinstalled.
[tool.cibuildwheel]
build = "cp312-* cp313-* cp314-*"
skip = "*-musllinux_* *-manylinux_i686 *-win32 *_ppc64le *_s390x"

# Quick sanity check on the built wheel: import the binding extension
# and verify the version string.
test-command = "python -c 'import aiopquic; from aiopquic._binding import _transport; print(\"aiopquic\", aiopquic.__version__ if hasattr(aiopquic, \"__version__\") else \"ok\")'"

[tool.cibuildwheel.linux]
# manylinux_2_34 = AlmaLinux 9 / RHEL 9 base. Ships gcc-toolset-14
# (gcc 14.2.1) and OpenSSL 3.5.1.
#
# We chose this image over manylinux_2_28 (RHEL 8, OpenSSL 1.1.1k)
# because the RHEL OpenSSL 1.1.1k FIPS build produces a ~30%
# throughput / ~30× p50 latency regression vs OpenSSL 3.x in our
# loopback TLS hot path on AMD Ryzen. We A/B-tested several
# wheel-build configurations (manylinux_2_28 with default gcc 14
# and dnf-installed gcc 11; manylinux2014 with gcc 10; manylinux_2_34
# with gcc 14) and found OpenSSL version was the only variable that
# moved the numbers. Suspect: RHEL's OpenSSL 1.1.1k crypto-policies
# routing + FIPS provider overhead routes Ryzen workloads through
# slower ASM paths than OpenSSL 3.0+ does.
#
# Trade-off: manylinux_2_34 narrows wheel compatibility to glibc
# 2.34+ (RHEL 9 / Ubuntu 22.04+); older systems install via sdist.
manylinux-x86_64-image = "manylinux_2_34"
before-all = """
dnf install -y openssl-devel cmake
bash build_picoquic.sh
"""

[tool.cibuildwheel.linux.environment]
CFLAGS = "-O3 -fno-strict-overflow -fPIC"
PICOQUIC_C_FLAGS = "-O3 -DNDEBUG"

[tool.cibuildwheel.macos]
# delocate bundles libssl/libcrypto from Homebrew into the wheel.
# We do NOT pin MACOSX_DEPLOYMENT_TARGET — each runner uses its
# native default so the bundled Homebrew dylibs (built against the
# runner's macOS) satisfy delocate's "library deployment target
# must be ≤ wheel deployment target" check:
#   macos-13 runner -> wheel targets macOS 13.0+ (Ventura)   [x86_64]
#   macos-14 runner -> wheel targets macOS 14.0+ (Sonoma)    [arm64]
# Older macOS users fall back to sdist (build from source).
before-all = """
brew install cmake openssl@3
bash build_picoquic.sh
"""
